--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,7 +1,24 @@
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url(/assets/Font/AvenirNextLTPro-Regular.otf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url(/assets/Font/AvenirNextLTPro-Demi.otf);
+  font-weight: 600;
+}
+@font-face {
+  font-family: "AvenirNextLTPro";
+  src: url(/assets/Font/AvenirNextLTPro-Bold.otf);
+  font-weight: bold;
+}
 html,
-body {
+body,
+h1 {
   margin: 0;
   padding: 0;
+  font-family: "AvenirNextLTPro";
 }
 
 .header {
@@ -14,8 +31,17 @@ body {
   .header {
     text-align: left;
     flex-direction: row;
-    padding-left: 20px;
   }
+}
+.header__logo {
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+}
+.header__logo:visited {
+  color: #FFFFFF;
 }
 .header__sections {
   display: flex;
@@ -29,16 +55,6 @@ body {
   .header__sections {
     justify-content: flex-start;
   }
-  .header__sections .section__titles {
-    padding-left: 20px;
-  }
-}
-.header .link {
-  color: #FFFFFF;
-  text-decoration: none;
-}
-.header .link:visited {
-  color: #FFFFFF;
 }
 .header__image {
   background-image: url("../assets/Images/hero-bio.jpg");
@@ -47,17 +63,40 @@ body {
   width: 100%;
   height: 440px;
   position: relative;
+  margin-bottom: 24px;
 }
 .header__image--modified {
+  padding-left: 16px;
+  padding-right: 16px;
   position: absolute;
-  bottom: 80px;
-  left: 40px;
+  top: 40%;
   color: #FFFFFF;
+}
+
+.main__content {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.main__title {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+}
+.main__title--margin {
+  padding-bottom: 16px;
 }
 
 .section__titles {
   height: 1px;
   color: #E1E1E1;
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.section__titles:visited {
+  color: #FFFFFF;
 }
 .section__titles:active {
   color: #FFFFFF;
@@ -71,10 +110,40 @@ body {
   max-width: 100%;
   height: auto;
   display: block;
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.subtitle {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+}
+
+.paragraph {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+}
+
+.gallery__background {
+  background-color: #FAFAFA;
 }
 
 .photogallery {
   max-width: 100%;
   height: auto;
   display: block;
+  padding-bottom: 16px;
+}
+
+.footer {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+  color: #FFFFFF;
+}
+
+.footer__background {
+  background-color: #323232;
 }/*# sourceMappingURL=bio.css.map */
