--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,11 +1,13 @@
 @use 'partials/mixins' as *;
 @use 'partials/variables' as *;
+@use 'partials/font' as *;
 
 html,
-body {
+body,
+h1 {
     margin: 0;
     padding: 0;
-    // font-family:
+    font-family: "AvenirNextLTPro";
 }
 
 .header {
@@ -17,7 +19,12 @@ body {
     @include tablet {
         text-align: left;
         flex-direction: row;
-        @include padding-left;
+        // @include padding-left;
+    }
+
+    &__logo {
+        @include link;
+        @include page-header;
     }
 
     &__sections {
@@ -31,21 +38,13 @@ body {
         @include tablet {
             justify-content: flex-start;
 
-            .section__titles {
-                @include padding-left;
-            }
+            // .section__titles {
+            //     @include padding-left;
+            // }
         }
 
     }
 
-    .link {
-        color: $White;
-        @include remove-underline;
-
-        &:visited {
-            color: $White;
-        }
-    }
 
     &__image {
         background-image: url("../assets/Images/hero-bio.jpg");
@@ -54,20 +53,37 @@ body {
         width: 100%;
         height: 440px;
         position: relative;
+        @include margin-bottom;
 
         &--modified {
+            @include padding;
             position: absolute;
-            bottom: 80px;
-            left: 40px;
+            top: 40%;
             color: $White;
         }
     }
 
 }
 
+.main {
+    &__content {
+        @include padding;
+    }
+
+    &__title {
+        @include section-header;
+        &--margin{
+            @include padding-bottom;
+
+        }
+    }
+}
+
 .section__titles {
     height: 1px;
     color: $Mercury;
+    @include subheader;
+    @include link;
 
 
     &:active {
@@ -81,10 +97,35 @@ body {
 }
 
 // main 
-.musicians__image{
+.musicians__image {
     @include images;
+    @include padding-top;
+    @include padding-bottom;
 }
 
-.photogallery{
+.subtitle {
+    @include subheader;
+
+}
+
+.paragraph {
+    @include body-copy;
+}
+
+.gallery__background {
+    background-color: $Alabaster;
+}
+
+.photogallery {
     @include images;
+    @include padding-bottom;
+}
+
+.footer {
+    @include footer-copy;
+    color: $White;
+}
+
+.footer__background {
+    background-color: $BandSite-Black;
 }
